Bug 321516 - Selecting text in Midnight Commander not possible anymore
Summary: Selecting text in Midnight Commander not possible anymore
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: copy-paste (other bugs)
Version First Reported In: 2.11
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-23 07:23 UTC by Nikos Chantziaras
Modified: 2013-06-23 16:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikos Chantziaras 2013-06-23 07:23:25 UTC
Upgrading from KDE 4.10.4 to 4.11 beta 1 (4.10.80) breaks text selection in Midnight Commander. Previously (in KDE 4.10.4 and older,) I could hold down Shift and select text with the mouse. This is no longer possible; holding select and dragging the mouse will not select text.

As a work around, Shift+double-click still works and it correctly selects the current word. Holding down the mouse button after the double-click will then allow me to extend the selection range past the initial word.

This happens with both the Slang as well as NCurses versions of Midnight Commander.

Reproducible: Always




KDE 4.10.80, Qt 4.8.4, Midnight Commander 4.8.8.
Comment 1 Kurt Hindenburg 2013-06-23 12:58:08 UTC
Thanks - with new shift+click to extend selection this caused this bug
Comment 2 Kurt Hindenburg 2013-06-23 16:40:21 UTC
Git commit e5b7480966f3121f4e1042648e29a74b9c29b2e9 by Kurt Hindenburg.
Committed on 23/06/2013 at 16:37.
Pushed by hindenburg into branch 'master'.

Fix 'extend Selection' bug for apps not interested in mouse

New feature in 4.11 allows Shift+Click to extend the selection.
However, for programs not interested in mouse (vim, mc, etc) this
causes issues.  Fix is to ignore extending selection for those apps.
FIXED-IN: 4.11

M  +3    -2    src/TerminalDisplay.cpp

http://commits.kde.org/konsole/e5b7480966f3121f4e1042648e29a74b9c29b2e9