Fix 'extend Selection' bug for apps not interested in mouse

New feature in 4.11 allows Shift+Click to extend the selection.
However, for programs not interested in mouse (vim, mc, etc) this
causes issues.  Fix is to ignore extending selection for those apps.

BUG: 321516
FIXED-IN: 4.11